fix horizontal scroll

--- a/src/containers/Weather/Weather.css
+++ b/src/containers/Weather/Weather.css
@@ -1,8 +1,9 @@
 .Weather {
     min-height: 100vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     transition: all .3s ease-in-out;
+    box-sizing: border-box;
 }
 
 .Back-Image{
@@ -10,7 +11,7 @@
     background: url("../../assets/darkModeImg.jpg") no-repeat center;
     background-size: cover;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     z-index: -100;
 }
 
